--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "poppins";
 }
+/* This is a small project so why use two css files so i deleted the app.css and i will use index.css */
+body {
+  /* background: #111317; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+.container {
+  display: flex;
+}
+.text .textarea {
+  width: 35vw;
+  height: 540px;
+  background: #ffffff;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  /* outline: none; */
+  padding: 10px;
+  font-size: 15px;
+  /* font-weight: 900; */
+  color: #203e6d;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  /* border-radius: 3px; */
+  overflow-y: scroll;
+}
+.output {
+  font-size: 18px;
+  width: 35vw;
+  height: 540px;
+  background: #f1f5f8;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* margin-left: 20px; */
+  padding: 10px;
+  /* color: #fff; */
+  line-height: 3rem;
 }
